@@ -231,3 +231,11 @@ org.castor.jdo.use.jdbc30=false
 # defaults to false
 #
 org.exolab.castor.jdo.sqlserver.ansi-compliant=false
+
+#
+# Property specifying whether the ClassDescriptorResolver should (automatically) search for and 
+# consult with package mapping files (.castor.xml) to retrieve class descriptor information; 
+# on by default. defaults to true
+#
+#org.exolab.castor.xml.loadPackageMappings=false
+
